# operator

./: .dockerignore  .eslintrc.base.json  .gitignore  .npmrc  .tool-versions  404.html  AI_POLICY.md  BACKSTAGE-IMPLEMENTATION-PLAN.md  BACKSTAGE-OPERATOR-PLUGINS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  MISSING-DOCUMENTATION-TODO.md  Makefile  PRIVACY.md  README.md  VERSION.html  azure-pipelines.yml  build.rs  bump-version.sh  catalog-info.yaml  clippy.toml  codecov.yml  deny.toml  index.html  package.json  publi.sh  sitemap.xml  typedoc.json
.claude/: settings.json
.claude/commands/: build-backstage-server.md  build-docs.md  build-vscode-extension.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: backstage.yaml  build.yaml  docs.yml  integration-tests-matrix.yml  integration-tests.yml  opr8r.yaml  sign-windows.yaml  vscode-extension.yaml  zed-extension.yaml
agents/: index.html
agents/artifact-detection/: index.html
agnt-plugin/: README.md  alert.js  create-ticket.js  export.js  launch.js  manifest.json  package.json  queue.js  run-step.js
agnt-plugin/lib/: operator-client.js
assets/css/: codicon.css  main.css
backstage-server/: .eslintrc.json  .gitignore  README.md  app-config.yaml  bunfig.toml  knip.json  package.json  playwright.config.ts  tsconfig.json
backstage-server/e2e/: README.md  auth.ts  catalog.spec.ts  health.spec.ts  issuetypes.spec.ts  plugins.spec.ts
backstage-server/scripts/: generate-embeds.ts
backstage-server/src/: standalone.ts
backstage/taxonomy/: index.html
bindings/: AcpConfig.ts  ActiveAgentResponse.ts  ActiveAgentsResponse.ts  AgentDetailResponse.ts  AgentProfile.ts  AgentState.ts  AgentsConfig.ts  ApiConfig.ts  AssessTicketResponse.ts  AttemptStatus.ts  BackstageConfig.ts  BrandingConfig.ts  CmuxPlacementPolicy.ts  CollectionPreset.ts  CollectionResponse.ts  CompletedTicket.ts  Config.ts  CreateAlertRequest.ts  CreateAlertResponse.ts  CreateDelegatorFromToolRequest.ts  CreateDelegatorRequest.ts  CreateFieldRequest.ts  CreateIssueTypeRequest.ts  CreateModelServerRequest.ts  CreatePrError.ts  CreateStepRequest.ts  CreateTicketRequest.ts  CreateTicketResponse.ts  DefaultLlmResponse.ts  Delegator.ts  DelegatorLaunchConfig.ts  DelegatorLaunchConfigDto.ts  DelegatorResponse.ts  DelegatorsResponse.ts  DetectedTool.ts  DiscoveredProject.ts  DockerConfig.ts  ExecutionProcess.ts  ExternalIssueTypeSummary.ts  ExternalMcpServer.ts  (+165 more)
cli/: index.html
coder-module/: README.md  main.test.ts  main.tf  run.sh
config/: default.toml
configuration/: index.html
crates/relay/: Cargo.toml
crates/relay/src/: channel_session.rs  client.rs  hub.rs  lib.rs  protocol.rs  session_name.rs  socket_path.rs
delegators/: index.html
design-system/: index.html
docs/: .gitignore  404.html  CNAME  Gemfile  VERSION.md  _config.yml  index.md  llms.txt  privacy-policy.md  robots.txt  terms-of-service.md
docs/_data/: checksums.yml  navigation.yml  seoimages.csv
docs/_includes/: footer.html  head.html  sidebar.html
docs/_layouts/: default.html  doc.html
docs/_site/: 404.html  VERSION.html  index.html  sitemap.xml
docs/agents/: artifact-detection.md  index.md
docs/architecture/: index.md  vibe-kanban-comparison.md
docs/backstage/: index.md  taxonomy.md
docs/cli/: index.md
docs/collections/: index.json
docs/configuration/: index.md
docs/delegators/: index.md
docs/design-system/: index.md
docs/downloads/: index.md
docs/getting-started/: index.md  installation.md  platform-support.md  prerequisites.md
docs/issue-types/: index.md
docs/kanban/: index.md
docs/llm-tools/: index.md
docs/maturity/: index.md
docs/relay/: index.md
docs/schemas/: api.md  config.json  config.md  index.md  issuetype.md  jira-api.json  metadata.md  openapi.json  operator_output.json  project_analysis.json  state.json  state.md
docs/shortcuts/: index.md
docs/startup/: index.md
docs/taxonomy/: index.md
docs/tickets/: index.md
docs/tmux/: index.md
docs/vscode/: index.html
downloads/: index.html
getting-started/: index.html
getting-started/agents/: index.html
getting-started/git/: index.html
getting-started/installation/: index.html
getting-started/integrations/: index.html
getting-started/kanban/: index.html
getting-started/model-servers/: index.html
getting-started/notifications/: index.html
issue-types/: index.html
kanban/: index.html
llm-tools/: index.html
opr8r/: Cargo.toml  README.md
opr8r/config/: operator-relay.json
opr8r/src/: api.rs  cli.rs  main.rs  operator_relay.rs  output_parser.rs  relay_server.rs  runner.rs  transition.rs
privacy-policy/: index.html
relay/: index.html
schemas/: config.json  index.html  openapi.json  operator_output.json  project_analysis.json  state.json
scripts/: cicdprep.sh  codesign.sh  notarize.sh  operator-statusline.sh
shared/: types.ts
shortcuts/: index.html
skills/: step.md
src/: app.rs  config.rs  editors.rs  env_vars.rs  lib.rs  logging.rs  main.rs  projects.rs  setup.rs  state.rs  version.rs
src/acp/: mod.rs  (+5 more)
startup/: index.html
taxonomy/: index.html
terms-of-service/: index.html
tests/: acp_integration.rs  agnt_plugin_tool_names.rs  feature_parity_test.rs  git_integration.rs  kanban_integration.rs  launch_integration.rs  launch_integration_cmux.rs  launch_integration_vscode.rs  launch_integration_zellij.rs  mcp_stdio_integration.rs  model_server_integration.rs  opr8r_integration.rs  relay_integration.rs  rest_api_integration.rs  surface_parity.rs  ui_packaging.rs  version_parity.rs  vertical_parity.rs
tickets/: index.html
tmux/: index.html
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
vscode-extension/: .eslintrc.json  .fantasticonrc.js  .npmrc  .nycrc.json  .vscode-test.mjs  .vscodeignore  CHANGELOG.md  LICENSE  README.md  eslint.config.mjs  operator-terminals-0.1.10.vsix  package-lock.json  package.json  tsconfig.json  tsconfig.webview.json  webpack.webview.config.js
zed-extension/: Cargo.toml  README.md  TODO.md  extension.toml
zed-extension/src/: lib.rs
(+656 files in other folders)
