[package]
name = "operator"
version = "0.1.22"
edition = "2021"
description = "Multi-agent orchestration dashboard for gbqr.us"
authors = ["gbqr.us"]
license = "MIT"
default-run = "operator"

[lib]
name = "operator"
path = "src/lib.rs"

[[bin]]
name = "operator"
path = "src/main.rs"

[[bin]]
name = "generate_types"
path = "src/bin/generate_types.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"

# Templating
handlebars = "6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File watching
notify = "7"

# Configuration
config = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Schema and TypeScript generation
schemars = { version = "1.0", features = ["chrono04", "uuid1", "preserve_order"] }
ts-rs = { version = "10", features = ["uuid-impl", "chrono-impl", "no-serde-warnings", "serde-json-impl"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5"
glob = "0.3"
regex = "1"
once_cell = "1"
lazy_static = "1"
backon = "1"
which = "7"

# System info (for core count)
sysinfo = "0.32"

# Cryptography (for content hashing)
sha2 = "0.10"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }

# Async traits
async-trait = "0.1"

# REST API
axum = { version = "0.7", features = ["macros", "tokio", "tracing"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http-body-util = "0.1"

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }

[dev-dependencies]
tempfile = "3"

# Platform-specific notifications
[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"
