[package]
name = "operator"
version = "0.2.1"
edition = "2021"
rust-version = "1.95"
description = "Multi-agent orchestration dashboard for gbqr.us"
authors = ["gbqr.us"]
license = "MIT"
default-run = "operator"

[lib]
name = "operator"
path = "src/lib.rs"

[[bin]]
name = "operator"
path = "src/main.rs"

[[bin]]
name = "generate_types"
path = "src/bin/generate_types.rs"

[dependencies]
# Shared relay crate (also used by opr8r)
operator-relay = { path = "crates/relay" }

# TUI
ratatui = "0.30"
crossterm = "0.29"
tui-textarea = "0.7"

# Templating
handlebars = "6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File watching
notify = "8"

# Configuration
config = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.1"

# Schema and TypeScript generation
schemars = { version = "1.0", features = ["chrono04", "uuid1", "preserve_order"] }
ts-rs = { version = "12", features = ["uuid-impl", "chrono-impl", "no-serde-warnings", "serde-json-impl"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "6"
glob = "0.3"
regex = "1"
once_cell = "1"
lazy_static = "1"
backon = "1"
which = "8"

# System info (for core count)
sysinfo = "0.39"

# Cryptography (for content hashing)
sha2 = "0.11"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }

# Async traits
async-trait = "0.1"

# REST API
axum = { version = "0.8", features = ["macros", "tokio", "tracing"] }
tokio-stream = "0.1"
futures-util = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http-body-util = "0.1"

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Agent Client Protocol (ACP) — JSON-RPC 2.0 over stdio for editor integration
agent-client-protocol = "0.13"

# Embedded web UI (behind embed-ui feature flag)
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
utoipa-axum = "0.2"

[features]
default = ["embed-ui"]
embed-ui = ["dep:rust-embed", "dep:mime_guess"]

[dev-dependencies]
operator-relay = { path = "crates/relay" }
tempfile = "3"
flate2 = "1"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Nursery lints for cohesion
cognitive_complexity = "warn"
redundant_clone = "warn"

# Allow noisy pedantic lints that don't add value here
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
wildcard_imports = "allow"
# TUI/builder patterns make these too noisy
unused_self = "allow"
trivially_copy_pass_by_ref = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
struct_field_names = "allow"
# String building in TUI renderers
format_push_string = "allow"
# Many functions wrap for future error paths
unnecessary_wraps = "allow"
# Common in async code stubs
unused_async = "allow"
# Doc links with quotes are fine
doc_link_with_quotes = "allow"
# Allow cast_possible_wrap for u64→i64 in timestamps
cast_possible_wrap = "allow"
# Match arms kept separate for readability in TUI event handlers
match_same_arms = "allow"
# clone_from is less readable than reassignment
assigning_clones = "allow"
# let-else not always clearer
manual_let_else = "allow"
# Items after statements common in this codebase
items_after_statements = "allow"
# &Option<T> is idiomatic in this codebase for optional refs
ref_option = "allow"
# Excessive bools in setup functions are intentional
fn_params_excessive_bools = "allow"
# HashMap without explicit hasher is fine for non-perf-critical code
implicit_hasher = "allow"
# map_or readability is subjective
map_unwrap_or = "allow"
# for_each vs for loop is stylistic
needless_for_each = "allow"
# Explicit continue aids readability in complex loops
needless_continue = "allow"
# Wildcard matches are intentional for future-proofing
match_wildcard_for_single_variants = "allow"

# Platform-specific notifications
[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"
