[package]
name = "opr8r"
version = "0.2.1"
edition = "2021"
description = "Minimal CLI wrapper for LLM commands in multi-step ticket workflows"
license = "MIT"
repository = "https://github.com/untra/operator"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "io-util", "net", "sync", "time", "macros", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
operator-relay = { path = "../crates/relay" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
