[package]
name = "operator-relay"
version = "0.1.0"
edition = "2021"
description = "Relay hub and channel-session types for operator and opr8r"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt", "io-util", "net", "sync", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
async-trait = "0.1"
notify = "7"
dirs = "5"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
